# rust_vs_python

./: Cargo.toml  Readme.md  pytest.py
src/: main.py  main.rs
