[package]
name = "rustvspython"
version = "0.0.0"
authors = ["Ivan Valenkov <ivanvalenkov@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.1"
rand = "0.7.0-pre.1"
itertools = "0.8.0"
num = "0.2.0"